--- a/content/post/hpma2016.md
+++ b/content/post/hpma2016.md
@@ -1,7 +1,7 @@
 ---
 title: 投票内容:第15回ハロプロ楽曲大賞'16
 slug: hpma2016
-date: 2016-12-05 1:32:57
+date: 2016-12-05T1:32:57+09:00
 tags:
     - アイドル
     - ハロプロ
