--- a/content/post/hpma2014.md
+++ b/content/post/hpma2014.md
@@ -1,7 +1,7 @@
 ---
 title: 投票内容:第13回ハロプロ楽曲大賞'14。
 slug: hpma2014
-date: 2014-12-06 2:07:06
+date: 2014-12-06T2:07:06+09:00
 tags:
     - アイドル
     - ハロプロ
