--- a/content/post/ima2016.md
+++ b/content/post/ima2016.md
@@ -1,7 +1,7 @@
 ---
 title:  投票内容:第5回アイドル楽曲大賞2016
 slug: ima2016
-date: 2016-11-28 1:40:32
+date: 2016-11-28T1:40:32+09:00
 tags:
     - アイドル
 aliases:
